<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-101dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="#F6F6F5"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/login_text"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <ImageView
                android:id="@+id/appLogo"
                android:layout_width="103dp"
                android:layout_height="88dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/common_google_signin_btn_icon_light_normal" />

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="Email"
                android:inputType="textEmailAddress" />


            <EditText
                android:id="@+id/loginPwd"
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:gravity="left">

                <TextView
                    android:id="@+id/resetPwdLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="@string/reset_pwd_link"
                    android:textColor="@color/link" />

            </LinearLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login_text" />

            <TextView
                android:id="@+id/signUpLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sign_up_link"
                android:textColor="@color/link" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center">

                <View
                    android:id="@+id/leftLine"
                    android:layout_width="140dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="13dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/orText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/leftLine"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/or_string"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <View
                    android:layout_width="140dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="13dp"
                    android:layout_toRightOf="@id/orText"
                    android:background="@color/black" />
            </RelativeLayout>


            <com.google.android.gms.common.SignInButton
                android:id="@+id/googleSignInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</android.support.design.widget.CoordinatorLayout>